fixed social spacing

--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ body {
 }
 
 .social {
-    display: inline;
+    display: inline-block;
     text-align: center;
-    padding-left: 24%;
+    width: 100%;
+    margin: 0px auto;
 }
 
 .logo {
@@ -87,8 +88,8 @@ body {
 
 .younger-child {
     float: right;
-    /* margin-right: 15%; */
 }
+
 
 .red-headed-step-child {
     float: left;
